vcl/source/gdi/print3.cxx
@@ -341,6 +341,8 @@ void Printer::PrintJob(const std::shared_ptr<PrinterController>& i_xController,
 bool Printer::PreparePrintJob(std::shared_ptr<PrinterController> xController,
                            const JobSetup& i_rInitSetup)
 {
+    Printer::updatePrinters();
+
     // check if there is a default printer; if not, show an error box (if appropriate)
     if( GetDefaultPrinterName().isEmpty() )
     {
@@ -537,16 +539,6 @@ bool Printer::PreparePrintJob(std::shared_ptr<PrinterController> xController,
         {
         }
     }
-#ifdef MACOSX
-    else
-    {
-        // The PrintDialog updates the printer list in its constructor so do
-        // the same for printers that bring up their own dialog since. Not
-        // sure if this is needed or not on Windows or X11, so limit only to
-        // macOS for now.
-        Printer::updatePrinters();
-    }
-#endif
 
     xController->pushPropertiesToPrinter();
     return true;
